@@ -1,6 +1,7 @@
 package main
 
 import (
+	"encoding/json"
 	"fmt"
 	"os"
 	"testing"
@@ -31,6 +32,10 @@ port = ` + fmt.Sprintf("%d", localDaemonPort) + `
 use ssl = disabled
 port = ` + fmt.Sprintf("%d", localDaemonPort) + `
 password = ` + localDaemonAdminPassword + `
+
+[/settings/external scripts/scripts]
+check_echo = echo '%ARG1%'
+check_echo_win = cmd /c echo '%ARG1%'
 `
 )
 
@@ -41,9 +46,11 @@ func TestDaemonRequests(t *testing.T) {
 	writeFile(t, `snclient.ini`, localDaemonINI)
 
 	pid := startBackgroundDaemon(t)
+	baseURL := fmt.Sprintf("http://127.0.0.1:%d", localDaemonPort)
+
 	t.Logf("daemon started: %d", pid)
 
-	baseArgs := []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-u", fmt.Sprintf("http://127.0.0.1:%d", localDaemonPort)}
+	baseArgs := []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-u", baseURL}
 
 	runCmd(t, &cmd{
 		Cmd:  bin,
@@ -53,7 +60,7 @@ func TestDaemonRequests(t *testing.T) {
 
 	runCmd(t, &cmd{
 		Cmd:  bin,
-		Args: []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-r", "-u", fmt.Sprintf("http://127.0.0.1:%d/api/v1/inventory", localDaemonPort)},
+		Args: []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-r", "-u", fmt.Sprintf("%s/api/v1/inventory", baseURL)},
 		Like: []string{`{"inventory":`},
 	})
 
@@ -71,10 +78,54 @@ func TestDaemonRequests(t *testing.T) {
 
 	runCmd(t, &cmd{
 		Cmd:  bin,
-		Args: []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-r", "-u", fmt.Sprintf("http://127.0.0.1:%d/api/v1/admin/reload", localDaemonPort)},
+		Args: []string{"run", "check_nsc_web", "-p", localDaemonPassword, "-r", "-u", baseURL + "/api/v1/admin/reload"},
 		Like: []string{`RESPONSE-ERROR: http request failed: 403 Forbidden`},
 		Exit: 3,
 	})
+
+	runCmd(t, &cmd{
+		Cmd:  "curl",
+		Args: []string{"-s", "-u", "user:" + localDaemonAdminPassword, "-k", baseURL + "/api/v1/admin/reload"},
+		Like: []string{`POST method required`},
+	})
+
+	runCmd(t, &cmd{
+		Cmd:  "curl",
+		Args: []string{"-s", "-u", "user:" + localDaemonAdminPassword, "-k", "-X", "POST", baseURL + "/api/v1/admin/reload"},
+		Like: []string{`{"success":true}`},
+	})
+
+	postData, err := json.Marshal(map[string]string{
+		"Unknown": "false",
+	})
+	require.NoErrorf(t, err, "post data json encoded")
+	runCmd(t, &cmd{
+		Cmd:  "curl",
+		Args: []string{"-s", "-u", "user:" + localDaemonAdminPassword, "-k", "-s", "-d", string(postData), baseURL + "/api/v1/admin/certs/replace"},
+		Like: []string{`unknown field`},
+	})
+
+	// test replacing certificates
+	err = os.WriteFile("test.crt", []byte{}, 0o600)
+	require.NoErrorf(t, err, "test.crt truncated")
+	err = os.WriteFile("test.key", []byte{}, 0o600)
+	require.NoErrorf(t, err, "test.key truncated")
+	postData, err = json.Marshal(map[string]interface{}{
+		"Reload":   true,
+		"CertData": "dGVzdGNlcnQ=",
+		"KeyData":  "dGVzdGtleQ==",
+	})
+	require.NoErrorf(t, err, "post data json encoded")
+	runCmd(t, &cmd{
+		Cmd:  "curl",
+		Args: []string{"-s", "-u", "user:" + localDaemonAdminPassword, "-k", "-s", "-d", string(postData), baseURL + "/api/v1/admin/certs/replace"},
+		Like: []string{`{"success":true}`},
+	})
+	crt, _ := os.ReadFile("test.crt")
+	key, _ := os.ReadFile("test.key")
+
+	assert.Equalf(t, "testcert", string(crt), "test certificate written")
+	assert.Equalf(t, "testkey", string(key), "test certificate key written")
 
 	ok := stopBackgroundDaemon(t)
 	assert.Truef(t, ok, "stopping worked")
